Added test cases.

--- a/bruteForce1.tex
+++ b/bruteForce1.tex
@@ -120,8 +120,9 @@ To further constrain the circuit, we can generate random triangle-free inputs, e
 
 \section{Results}
 
-For a small set of tiny problems, here are whether the problem was satisfiable
-(and there is a circuit with that many gates). Also shown is the runtime, on a
+For a small set of tiny problems, the following table shows whether the problem was satisfiable
+(and there is a circuit with that many gates that is correct, at least given the number of
+sample inputs given). Also shown is the runtime, on a
 lightly-loaded X200s laptop.
 
 \csvautotabular{runtimes.csv}
