--- a/bruteForce1.tex
+++ b/bruteForce1.tex
@@ -8,7 +8,7 @@
 
 Here, I look at the complexity of checking whether an undirected
 graph contains a triangle (a.k.a. 3-clique, or $K_3$).
-This is a small case of the NP-complete
+This is a tiny case of the NP-complete
 CLIQUE problem. We would therefore expect it to be both hard to answer, and also difficult
 to {\em prove} hard to answer.
 
@@ -33,11 +33,11 @@ find triangles.
 
 \subsection{Motivation}
 
-Why might bounds on circuits in tiny graphs be useful? Since we're
+Why might bounds on circuits for tiny graphs be useful? Since we're
 only looking at tiny input graphs (and circuits), such bounds have
-limited relevance to the P=NP question.
+limited relevance to the $P=NP$ question.
 
-It's natural to guess that ``you need at least one NAND gate per triangle'',
+It seems natural to guess that ``you need at least one NAND gate per triangle'',
 and try to prove that.
 If brute-force search turned up a circuit with even one fewer NAND gate
 than there are triangles,
@@ -45,14 +45,20 @@ then that would rule out that proof strategy.
 The structure of the circuit might be interesting (even though it wouldn't
 say anything directly about whether $P=NP$).
 
-The encoded formulas may also be useful as test problems for SAT solvers;
-benchmarks and competitions for those often require a source of
-problems known to be unsatisfiable, and/or difficult. Assuming $P \ne NP$,
+The encoded formulas may also be useful as test problems for SAT solvers.
+Benchmarks and competitions for those often require a source of
+problems known to be unsatisfiable, and/or difficult \cite{toughsat}.
+ Assuming $P \ne NP$,
 a formula corresponding to the existence of a small circuit for an NP-complete
 problem should be unsatisfiable. (To save memory, we relax the requirement
 that the circuit work on all possible inputs; this means that the formula we
 write may be satisfiable, even if no circuit with that many gates {\em exactly}
 finds triangles.)
+
+Note that this is somewhat win-win: either the generated formulas are easy to
+prove unsatisfiable (in which case we get better lower bounds on triangle finding),
+or they're hard to prove unsatisfiable (in which case we have more probably-unsatisfiable
+problems for testing SAT solvers -- admittedly this may be less of a win.)
 
 \section{Encoding as a quantified Boolean formula}
 
@@ -67,7 +73,7 @@ using a Boolean variable for each wire which might be
 present. Specifically, we can encode an $m$-input circuit
 made of $g$ NAND gates using $mg$ bits (one per input-gate
 wire), plus $g \choose 2$ bits (one per gate-gate wire).
-We also have one variable per input wire, and can code up
+We also have one variable per input wire (edge), and can code up
 a formula for ``has a triangle.''
 To code up the formula ``there is a circuit which works'', we
 have to universally quantify over the inputs (after all, the
@@ -88,52 +94,69 @@ my machine (a Thinkpad X200s with 8gb memory.)
 \subsection{Forcing wires to be sorted}
 
 I also tried adding a constraint that the rows of
-the connectivity matrix were in lexicographic order.
-(This can be done WLOG, because we can sort the
-gates in a circuit until they're in lexicographic
-order.)
+the connectivity matrix are in lexicographic order.
+We can do this without loss of generality. Proof sketch:
+pick an arbitrary order for the input wires. For all gates
+which only have front-level inputs, write their inputs as
+a bit-vector, find the lexicographically first, and call it
+$g_1$. Then find $g_2$ by only considering front-level inputs,
+and wires from $g_1$ (treating it as the most significant bit.)
+Repeat until you've added all the gates.
+This defines a unique ordering of gates, such that the adjacency
+matrix of all wires is lexicographically sorted.
 
+This may have helped a bit, but not much (data not shown; I
+look at the effect of this more carefully below.)
 
-This seemed
-to make it slightly faster (data not shown), but not
-much.
-
-\section{Looking for circuits which approximately find triangles}
-
+\section{Approximate triangle-finding circuits}
 
 In the previous attempt, we quantified over all the possible inputs. This meant that the notion of
-whether there was a triangle was part of the formula. As in razborov’s monotone circuit bound, we
-can also approximately specify how the circuit should work. (Recall that MAX-CLIQUE, at least, is
-hard to approximate, unless P=NP. FIXME CITE)
+whether there was a triangle was part of the formula. As in Razborov's monotone circuit bound \cite{Razborov85lowerbounds}, we
+can also approximately specify how the circuit should work.
+MAX-CLIQUE, at least, is
+hard to approximate, unless $P=NP$ \cite{hastad_clique_1999}, so this
+may be enough to specify the formula.
 
-The cases which have a triangle (and the circuit should output a 1) can be specified using
-$n \choose 3$ clauses. These clauses each only need to specify that three inputs are 1s.
+This approach is reminiscent of machine learning: we are asking for a ``simple'' circuit which explains some examples. At first,
+I used the $n \choose 3$ cases which have one triangle (and zeros elsewhere) as
+positive examples. Following Razborov's monotone circuit bound \cite{Razborov85lowerbounds}, 
+I used complete bipartite graphs (``CBIPs'') as negative examples.
 
-Choosen3 is the number of cliques, as it were, which would normally be limiting.
-However, in this case, the cases which lack a triangle are more problematic. Following razborov's monotone circuit bound, we can use complete bipartite graphs (cbips) as a ready source of triangle-free graphs. Similarly to the case with triangles, we don’t have to specify all the inputs -- any input graph with 1s in only a subset of a cbip’s edges is also guaranteed to be triangle-free. Therefore, for a given partition of vertices into sets A and B, we simply feed in 0s to the clique with edges in A, and similarly for B. We don’t feed in 1s to the cbip, as the 0s suffice to prevent a triangle.
-
-This approach is reminiscent of machine learning: we are asking for a ``simple'' circuit which explains some examples. In this case, of course, the examples aren’t just bitstrings, since some variables aren’t specified. In any case, it seems perfectly possible that there is a small circuit which works on these examples, but doesn’t find triangles; after all, we’re only approximately specifying a triangle-finding circuit. If a SAT solver says ``there is no circuit with $g$ gates which works on these examples'', then that implies that no correct triangle-finding circuit has $g$ gates, either.
-
-However, this may well yield a circuit which only {\em approximately} finds triangles.
-To further constrain the circuit, we can generate random triangle-free inputs, eg by picking random graphs, and knocking out random edges.
-
+This small number of examples was enough to show that, with four vertices,
+at least five gates were needed. However, with five vertices, there were
+circuits which distinguished those test cases, but had fewer than ${5 \choose 2} + 1$ gates. Therefore, I added test cases which were random graphs,
+and added a constraint that the circuit would output 0 or 1 (according
+to whether the graph contained a triangle.)
 
 \section{Results}
 
 For a small set of tiny problems, the following table shows whether the problem was satisfiable
 (and there is a circuit with that many gates that is correct, at least given the number of
 sample inputs given). Also shown is the runtime, on a
-lightly-loaded X200s laptop.
+lightly-loaded X200s laptop. (Where ``satisfiable?'' is -, I stopped the program by hand.)
 
 \csvautotabular{runtimes.csv}
 
 \section{Conclusions}
 
+This approach didn't improve the lower bounds. However, it was
+less memory-intensive than using BDDs. It may be a useful source
+of ``likely to be unsatisfiable'' SAT instances.
+Forcing the wires to be sorted didn't help much.
 
+\subsection{Future work}
 
+Boiling the problem down to propositional logic presumably loses a lot of the inherent
+symmetry in the problem. However, fully automated SAT solvers are arguably more developed
+than fully automated first- or higher-order theorem provers.
 
+Rather than using random graphs as training data, it might be possible to choose those
+more systematically. Possibly graphs with multiple triangles would be good positive examples.
+Or, perhaps two-edge paths (which are triangles with an edge removed) would be good negative
+examples.
 
-FIXME REFERENCES
+\bibliography{references}
+\bibliographystyle{plain}
 
 \end{document}
 
